--- a/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
@@ -8,4 +8,41 @@
     app:cardCornerRadius="20dp"
     app:cardBackgroundColor="@color/show_view">
 
+    <TextView
+        android:id="@+id/userName"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="136dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="27dp"
+        android:gravity="center"
+        android:text="@string/show_pk"
+        android:textSize="12sp"
+        android:textColor="@color/white">
+    </TextView>
+
+    <ImageView
+        android:id="@+id/userMicOnView"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_marginTop="138dp"
+        android:layout_marginBottom="11dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginEnd="16dp"
+        android:background="@mipmap/show_mic_bg">
+    </ImageView>
+
+    <ImageView
+        android:id="@+id/userMicOffView"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_marginTop="138dp"
+        android:layout_marginBottom="11dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginEnd="16dp"
+        android:background="@mipmap/show_mic_off_bg"
+        android:visibility="invisible">
+    </ImageView>
+
 </androidx.cardview.widget.CardView>
