--- a/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
@@ -1,48 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/video_container"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="109dp"
-    android:layout_height="163dp"
-    app:cardCornerRadius="20dp"
-    app:cardBackgroundColor="@color/show_view">
+    android:layout_height="163dp">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/video_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="20dp"
+        app:cardBackgroundColor="@color/show_view" />
 
     <TextView
         android:id="@+id/userName"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="136dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="27dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/show_pk"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:maxWidth="80dp"
+        android:elevation="3dp"
         android:textSize="12sp"
-        android:textColor="@color/white">
-    </TextView>
+        android:layout_marginBottom="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:singleLine="true"
+        tools:text="1212344556"
+        android:drawableEnd="@drawable/show_mic_bg"
+        android:textColor="@color/white"/>
 
-    <ImageView
-        android:id="@+id/userMicOnView"
-        android:layout_width="14dp"
-        android:layout_height="14dp"
-        android:layout_marginTop="138dp"
-        android:layout_marginBottom="11dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginEnd="16dp"
-        android:background="@mipmap/show_mic_bg">
-    </ImageView>
-
-    <ImageView
-        android:id="@+id/userMicOffView"
-        android:layout_width="14dp"
-        android:layout_height="14dp"
-        android:layout_marginTop="138dp"
-        android:layout_marginBottom="11dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginEnd="16dp"
-        android:background="@mipmap/show_mic_off_bg"
-        android:visibility="invisible">
-    </ImageView>
-
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
