fix bugs in link and pk

--- a/Android/scenes/show/src/main/res/layout/show_live_pk_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_pk_dialog.xml
@@ -17,7 +17,8 @@
         android:layout_marginTop="23dp"
         android:button="@null"
         android:gravity="center"
-        android:text="@string/show_linking_request_message"
+        android:textSize="16sp"
+        android:text="@string/show_pking_request_message"
         android:textColor="@color/black"
         android:textStyle="bold" />
 
