--- a/Android/scenes/show/src/main/res/layout/show_live_prepare_activity.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_prepare_activity.xml
@@ -73,6 +73,7 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white_60_percent"
             android:textSize="15sp"
+            android:maxLength="16"
             app:layout_constraintBottom_toTopOf="@id/tvRoomId"
             app:layout_constraintEnd_toStartOf="@id/ivEdit"
             app:layout_constraintHorizontal_weight="0.6"
@@ -175,7 +176,7 @@
             android:drawableTop="@mipmap/show_live_prepare_ic_setting"
             android:drawablePadding="3dp"
             android:gravity="center"
-            android:text="@string/show_live_prepare_hd"
+            android:text="@string/show_live_prepare_setting"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@id/tvTip"
