[Show][Android]fix statistic display bug(ENT-239).

--- a/Android/scenes/show/src/main/res/layout/show_live_detail_top.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_top.xml
@@ -182,6 +182,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@id/tlStatistic"
         app:layout_constraintTop_toTopOf="@id/tlStatistic"
+        android:src="@mipmap/close"
         tools:visibility="visible" />
 
 
