--- a/Android/scenes/show/src/main/res/layout/show_live_link_audience.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_audience.xml
@@ -27,47 +27,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--    <androidx.appcompat.widget.AppCompatTextView-->
-<!--        android:id="@+id/iBtnSeatApplyText"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginEnd="6dp"-->
-<!--        android:text="@string/show_apply_onseat"-->
-<!--        android:textColor="@drawable/show_purple"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/textLinking"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/iBtnSeatApply"-->
-<!--        app:layout_constraintTop_toTopOf="@id/textLinking" />-->
-
-<!--    <androidx.appcompat.widget.AppCompatImageButton-->
-<!--        android:id="@+id/iBtnSeatApply"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:background="@mipmap/show_live_bottom_ic_linking"-->
-<!--        android:src="@mipmap/show_live_bottom_ic_linking"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/textLinking"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/textLinking"-->
-<!--        app:layout_constraintTop_toTopOf="@id/textLinking" />-->
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/iBtnCancelApplyText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="6dp"
-        android:text="@string/show_cancel_linking"
-        android:textColor="@drawable/show_purple"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/textLinking"
-        app:layout_constraintEnd_toStartOf="@id/iBtnCancelApply"
-        app:layout_constraintTop_toTopOf="@id/textLinking" />
-
-    <androidx.appcompat.widget.AppCompatImageButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/iBtnCancelApply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:background="@mipmap/show_cancel_link_apply"
-        android:src="@mipmap/show_cancel_link_apply"
+        android:text="@string/show_cancel_linking"
+        android:textColor="@drawable/show_purple"
+        android:background="#00000000"
+        android:drawableRight="@mipmap/show_cancel_link_apply"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/textLinking"
         app:layout_constraintEnd_toEndOf="@id/textLinking"
