[Show][Android]fix live room page switcher bug.

--- a/Android/scenes/show/src/main/res/layout/show_live_detail_activity.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_activity.xml
@@ -3,4 +3,7 @@
     android:id="@+id/viewPager2"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:overScrollMode="never"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_scrollEffect="none"
     android:layout_height="match_parent" />
