--- a/Android/scenes/voice/voice/src/main/res/layout/voice_dialog_audio_setting.xml
+++ b/Android/scenes/voice/voice/src/main/res/layout/voice_dialog_audio_setting.xml
@@ -188,15 +188,39 @@
 <!--            app:layout_constraintTop_toTopOf="@+id/mtVoiceChanger"-->
 <!--            tools:text="@string/voice_chatroom_off" />-->
 
-        <!--  Bot Settings  -->
+        <!--  Bot Settings Title  -->
+        <View
+            style="@style/voice_bottom_sheet_subtitle_style"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/mtBotSettingsTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/mtBotSettingsTitle" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtBotSettingsTitle"
             style="@style/voice_bottom_sheet_subtitle_style"
+            android:layout_width="wrap_content"
             android:text="@string/voice_chatroom_bot_settings"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:drawableEnd="@drawable/voice_icon_room_setting_new_tag"
+            android:drawablePadding="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mtAGC" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginRight="@dimen/voice_sp_16"
+            android:textColor="@color/voice_color_979cbb"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/voice_sp_11"
+            android:text="@string/voice_chatroom_settings_host_only"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/mtBotSettingsTitle"
+            app:layout_constraintBottom_toBottomOf="@+id/mtBotSettingsTitle"/>
+
+        <!--  Bot Settings Options  -->
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
@@ -279,7 +303,16 @@
             app:layout_constraintTop_toTopOf="@+id/mtAgoraBotVolume"
             tools:text="50" />
 
-        <!-- Room Audio Settings  -->
+        <!-- Room Audio Settings Title  -->
+        <View
+            style="@style/voice_bottom_sheet_subtitle_style"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/mtAgoraChatroomEQTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/mtAgoraChatroomEQTitle" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtAgoraChatroomEQTitle"
             style="@style/voice_bottom_sheet_subtitle_style"
@@ -290,15 +323,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mtAgoraBotVolume" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/voice_color_f7f8fb"
-            app:layout_constraintBottom_toBottomOf="@+id/mtAgoraChatroomEQTitle"
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginRight="@dimen/voice_sp_16"
+            android:textColor="@color/voice_color_979cbb"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/voice_sp_11"
+            android:text="@string/voice_chatroom_settings_host_only"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/mtAgoraChatroomEQTitle"
-            app:layout_constraintTop_toTopOf="@+id/mtAgoraChatroomEQTitle" />
+            app:layout_constraintTop_toTopOf="@+id/mtAgoraChatroomEQTitle"
+            app:layout_constraintBottom_toBottomOf="@+id/mtAgoraChatroomEQTitle"/>
 
+        <!-- Room Audio Settings Options  -->
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
