--- a/Android/scenes/show/src/main/res/layout/show_live_detail_fragment.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_fragment.xml
@@ -66,4 +66,12 @@
         android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <include
+        android:id="@+id/livingEndLayout"
+        layout="@layout/show_live_detail_living_end"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
