--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_choose_song_list.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_choose_song_list.xml
@@ -65,6 +65,7 @@
         android:layout_height="1dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="14dp"
+        android:alpha="0.3"
         android:background="@color/white_20_percent"
         app:layout_constraintTop_toBottomOf="@id/cover_item_song_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
