--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_choosed_song_list.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_choosed_song_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingVertical="10dp"
+    android:paddingVertical="5dp"
     android:paddingHorizontal="20dp">
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -111,4 +111,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ivToDel"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="14dp"
+        android:alpha="0.3"
+        android:background="@color/white_20_percent"
+        app:layout_constraintTop_toBottomOf="@id/ivCover" />
 </androidx.constraintlayout.widget.ConstraintLayout>
