--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -84,6 +84,48 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/ivMusicStart" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/ivSkipPrelude"
+        android:layout_width="100dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="10dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:minWidth="0dp"
+        android:padding="0dp"
+        android:text="@string/ktv_skip_prelude"
+        android:gravity="center"
+        android:textSize="30px"
+        android:textColor="@color/white"
+        android:background="@drawable/ktv_skip_btn_bg"
+        android:drawableRight="@mipmap/close"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/switchOriginal"
+        app:layout_constraintStart_toEndOf="@id/ivMusicStart" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/ivSkipPostlude"
+        android:layout_width="100dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="10dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:minWidth="0dp"
+        android:padding="0dp"
+        android:text="@string/ktv_skip_postlude"
+        android:gravity="center"
+        android:textSize="30px"
+        android:textColor="@color/white"
+        android:background="@drawable/ktv_skip_btn_bg"
+        android:drawableRight="@mipmap/close"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/switchOriginal"
+        app:layout_constraintStart_toEndOf="@id/ivMusicStart" />
+
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/switchOriginal"
         android:layout_width="wrap_content"
@@ -124,5 +166,5 @@
         android:id="@+id/rlMusicControlMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="bgd_control_layout_lrc,switchOriginal,ivMusicMenu,ivMusicStart,ivChangeSong" />
+        app:constraint_referenced_ids="bgd_control_layout_lrc,switchOriginal,ivMusicMenu,ivMusicStart,ivChangeSong,ivSkipPostlude,ivSkipPrelude" />
 </androidx.constraintlayout.widget.ConstraintLayout>
