fix backaround corners

--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_chorus.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_chorus.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:background="@mipmap/bg_player_default">
+    tools:background="@mipmap/ktv_mv_default">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMusicName2"
