--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -84,47 +84,67 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/ivMusicStart" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/ivSkipPrelude"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="28dp"
-        android:layout_marginBottom="10dp"
-        android:insetLeft="0dp"
-        android:insetTop="0dp"
-        android:insetRight="0dp"
-        android:insetBottom="0dp"
-        android:minWidth="0dp"
-        android:padding="0dp"
-        android:text="@string/ktv_skip_prelude"
-        android:gravity="center"
-        android:textSize="30px"
-        android:textColor="@color/white"
+        android:layout_marginBottom="30dp"
+        android:orientation="horizontal"
         android:background="@drawable/ktv_skip_btn_bg"
-        android:drawableRight="@mipmap/close"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/switchOriginal"
-        app:layout_constraintStart_toEndOf="@id/ivMusicStart" />
+        app:layout_constraintStart_toEndOf="@id/ivMusicStart">
 
-    <androidx.appcompat.widget.AppCompatTextView
+        <TextView
+            android:id="@+id/ivSkipPreludeSkip"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:text="@string/ktv_skip_prelude"
+            android:gravity="center"
+            android:textSize="12dp"
+            android:textColor="@color/white">
+        </TextView>
+
+        <ImageView
+            android:id="@+id/ivSkipPreludeCancel"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:layout_gravity="center"
+            android:background="@mipmap/ktv_skip_cancel">
+        </ImageView>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/ivSkipPostlude"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="28dp"
-        android:layout_marginBottom="10dp"
-        android:insetLeft="0dp"
-        android:insetTop="0dp"
-        android:insetRight="0dp"
-        android:insetBottom="0dp"
-        android:minWidth="0dp"
-        android:padding="0dp"
-        android:text="@string/ktv_skip_postlude"
-        android:gravity="center"
-        android:textSize="30px"
-        android:textColor="@color/white"
+        android:layout_marginBottom="30dp"
+        android:orientation="horizontal"
         android:background="@drawable/ktv_skip_btn_bg"
-        android:drawableRight="@mipmap/close"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/switchOriginal"
-        app:layout_constraintStart_toEndOf="@id/ivMusicStart" />
+        app:layout_constraintStart_toEndOf="@id/ivMusicStart">
+
+        <TextView
+            android:id="@+id/ivSkipPostludeSkip"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:text="@string/ktv_skip_postlude"
+            android:gravity="center"
+            android:textSize="12dp"
+            android:textColor="@color/white">
+        </TextView>
+
+        <ImageView
+            android:id="@+id/ivSkipPostludeCancel"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:layout_gravity="center"
+            android:background="@mipmap/ktv_skip_cancel">
+        </ImageView>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/switchOriginal"
