--- a/Android/scenes/show/src/main/res/values/colors.xml
+++ b/Android/scenes/show/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="show_deliver">#EFEFEF</color>
     <drawable name="show_purple">#684BF2</drawable>
-    <color name="show_view">#594AE2</color>
+    <color name="show_view">#141650</color>
     <color name="show_text">#CE27FB</color>
 </resources>
