--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_control_view.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_control_view.xml
@@ -21,7 +21,6 @@
             android:visibility="visible"
             tools:visibility="visible" />
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clActive"
             android:layout_width="match_parent"
@@ -48,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="5dp"
+                android:contentDescription="Thumbs up"
                 android:src="@mipmap/good"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -68,17 +68,23 @@
                 android:visibility="gone"
                 tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/scoreControlView"
+            <include
+                android:id="@+id/combo_view"
+                layout="@layout/ktv_layout_lrc_combo_view"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/line_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="84dp"
-                android:textColor="@android:color/white"
-                android:visibility="gone"
+                android:layout_marginTop="48dp"
+                android:text="    "
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/app_name" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </androidx.cardview.widget.CardView>
