fix:语聊房入口封面修改

--- a/Android/app/src/main/res/layout/app_item_home_index.xml
+++ b/Android/app/src/main/res/layout/app_item_home_index.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:layout_gravity="center"
-    android:background="@mipmap/bg_app_def_white">
+    android:background="@mipmap/bg_app_def_white"
+    android:gravity="center">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivScenesBg"
@@ -38,17 +38,36 @@
         app:layout_constraintTop_toTopOf="@id/ivScenesBg"
         tools:text="@string/ktv_online" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvUnActive"
-        android:layout_width="56dp"
-        android:layout_height="20dp"
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="22dp"
         android:layout_marginTop="59dp"
-        android:background="@drawable/bg_full_black_25_r10"
-        android:gravity="center"
-        android:text="@string/app_coming_soon"
-        android:textColor="@color/white"
-        android:textSize="10sp"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="@id/ivScenesBg"
-        app:layout_constraintTop_toTopOf="@id/ivScenesBg" />
+        app:layout_constraintTop_toTopOf="@id/ivScenesBg">
+
+        <TextView
+            android:id="@+id/tvTip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="@string/app_voice_chat_spatialTip"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvUnActive"
+            android:layout_width="56dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/bg_full_black_25_r10"
+            android:gravity="center"
+            android:text="@string/app_coming_soon"
+            android:textColor="@color/white"
+            android:textSize="10sp" />
+
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
