--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -37,6 +37,7 @@
     <color name="grey_5B">#5B5B5B</color>
     <color name="grey_e1">#E1E1E1</color>
     <color name="grey_e5">#E5E5E5</color>
+    <color name="grey_f8">#F8F5FA</color>
     <color name="green_24">#24C61B</color>
     <color name="green_25">#25DEDE</color>
     <color name="green_6d">#6DD400</color>
