--- a/Android/scenes/voice/voice_spatial/src/main/res/layout/voice_spatial_view_room_live_top.xml
+++ b/Android/scenes/voice/voice_spatial/src/main/res/layout/voice_spatial_view_room_live_top.xml
@@ -67,11 +67,11 @@
             android:id="@+id/mtChatroomMembers"
             android:layout_width="wrap_content"
             android:layout_height="26dp"
-            android:minWidth="26dp"
             android:layout_gravity="end"
             android:layout_marginEnd="16dp"
             android:background="@drawable/voice_bg_rect_radius13_black20"
             android:gravity="center"
+            android:minWidth="26dp"
             android:paddingHorizontal="2dp"
             android:textColor="@color/voice_white"
             android:textSize="@dimen/voice_sp_10"
@@ -119,36 +119,38 @@
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtChatroomGifts"
-        style="@style/voice_top_text_style"
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:drawableStart="@drawable/voice_icon_room_gift"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbChatroomTop"
-        tools:text="2000" />
+        app:layout_constraintTop_toBottomOf="@+id/tbChatroomTop">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtChatroomWatch"
-        style="@style/voice_top_text_style"
-        android:layout_marginStart="5dp"
-        android:drawableStart="@drawable/voice_icon_room_watch"
-        app:layout_constraintBottom_toBottomOf="@+id/mtChatroomGifts"
-        app:layout_constraintStart_toEndOf="@+id/mtChatroomGifts"
-        app:layout_constraintTop_toTopOf="@+id/mtChatroomGifts"
-        tools:text="1000" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtChatroomGifts"
+            style="@style/voice_top_text_style"
+            android:layout_marginEnd="5dp"
+            android:drawableStart="@drawable/voice_icon_room_gift"
+            tools:text="2000" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtChatroomNotice"
-        style="@style/voice_top_text_style"
-        android:layout_marginStart="5dp"
-        android:drawableStart="@drawable/voice_icon_room_notice"
-        android:drawableEnd="@drawable/voice_icon_room_notice_arrow_right"
-        android:text="@string/voice_chatroom_notice"
-        app:layout_constraintBottom_toBottomOf="@+id/mtChatroomGifts"
-        app:layout_constraintStart_toEndOf="@+id/mtChatroomWatch"
-        app:layout_constraintTop_toTopOf="@+id/mtChatroomGifts"
-        tools:text="Notice" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtChatroomWatch"
+            style="@style/voice_top_text_style"
+            android:layout_marginEnd="5dp"
+            android:drawableStart="@drawable/voice_icon_room_watch"
+            tools:text="1000" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtChatroomNotice"
+            style="@style/voice_top_text_style"
+            android:drawableStart="@drawable/voice_icon_room_notice"
+            android:drawableEnd="@drawable/voice_icon_room_notice_arrow_right"
+            android:text="@string/voice_chatroom_notice"
+            tools:text="Notice" />
+
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glChatroom67"
@@ -172,7 +174,7 @@
         android:text="@string/voice_chatroom_social_chat"
         android:textColor="@color/voice_white"
         android:textSize="@dimen/voice_sp_10"
-        app:layout_constraintBottom_toBottomOf="@+id/mtChatroomGifts"
+        app:layout_constraintBottom_toBottomOf="@+id/ll"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/mtChatroomGifts" />
+        app:layout_constraintTop_toTopOf="@+id/ll" />
 </androidx.constraintlayout.widget.ConstraintLayout>
